--- a/index.html
+++ b/index.html
@@ -111,11 +111,10 @@
           </div>
 
           <div id="subscribe">
-            <form>
-              <input type="text" value="Email Address" Id="email">
+            <form action="" id="login">
+              <input type="text" value="Email Address" id="email">
               <input type="submit" value="Subscribe"  class="btn" id="submit">
             </form>
-          </div>
 
         <div class="social-icons">
           <a href="#" class="facebook w3l" title="Go to Our Facebook Page"><i class="fa w3l fa-facebook-square" aria-hidden="true"></i></a>
