--- a/classes.html
+++ b/classes.html
@@ -14,7 +14,7 @@
 
     <!--Font Awesome-->
     <script src="https://use.fontawesome.com/c0dfec8a89.js"></script>
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <!-- <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet"> -->
 
 
     <!-- Latest compiled and minified CSS -->
@@ -71,7 +71,7 @@
         <div class="row row3 " id="row3">
           <h1 class="text-center" id="our">OUR SCHEDULE</h1>
           <p class="text-center" id="posline2">-</p>
-          <div class=" classes  text-center col-lg-9" id="classes"> <!--different classes -->
+          <div class=" classes  text-center col-lg-6" id="classes"> <!--different classes -->
                     <table class="text-center">
                       <tr>
                         <th>Days</th>
@@ -119,24 +119,71 @@
               <p>10 classes at ksh 3,500/=</p>
               <p>15 classes at ksh 4,500/=</p>
             </div>
+            <div class="total col-lg-3 ">
+              <div class="mainText" ><input id="mainText" type="text" name="" value=""></div>
+
+                  <p>Salsa:<input id="mainText" type="number" name="salsa" value="" id="salsa"></p>
+                  <p>Yoga:<input id="mainText" type="number" name="yoga" value="" id="yoga"</p>
+                  <p>Aerobics:<input id="mainText" type="number" name="aerobics" value="" id="aerobics"></p>
+
+                  <button type="submit" name="button" id="submitBtn" onclick="submitClick();">Book</button>
+
+                  <button type="submit" name="button" id="ask">vaccancies</button>
+
+                </div>
 
               </div>
+
           <div id="description1">
-            <h2 class="text-center" id="exercise1">You can book here!</h2>
+            <h2 class="text-center" id="exercise1">Sign up here!</h2>
             <p class="text-center" id="posline5">-</p>
-            <p class="text-center" id="paragraph"></p>
-            <div class="total">
-                  <p>Salsa:<input type="number" name="salsa" value="" id="salsa"></p>
-                  <p>Yoga:<input type="number" name="yoga" value="" id="yoga"</p>
-                  <p>Aerobics:<input type="number" name="aerobics" value="" id="aerobics"></p>
-                  <button type="submit" name="button" id="sub" onclick="getConfirmation();">Book</button>
-                  <button type="submit" name="button" id="ask">vaccancies</button>
+            <div class="text-center" id="paragraph">
+
+              <form class="js-form"  method="post">
+                <div class="form-group">
+                  <label for="js-name">Name:</label>
+                  <input type="name" id="js-name" class="form-control" value="">
+
                 </div>
+
+                <div class="form-group">
+                  <label for="js-email">Email:</label>
+                  <input type="email" id="js-email" class="form-control" value="">
+
+                </div>
+                <div class="form-group">
+                  <label for="js-password">Password:</label>
+                  <input type="password" id="js-password" class="form-control" value="">
+
+                </div>
+                <h4>Which classes are you booking:</h4>
+                <div class="form-group">
+                  <label for="js-salsa">salsa:</label>
+                  <input type="number" id="js-salsa" class="form-control" value="">
+
+                </div>
+                <div class="form-group">
+                  <label for="js-yoga">Yoga:</label>
+                  <input type="number" id="js-yoga" class="form-control" value="">
+
+                </div>
+                <div class="form-group">
+                  <label for="js-aerobics">Aerobics:</label>
+                  <input type="number" id="js-aerobics" class="form-control" value="">
+
+                </div>
+
+              <button id="js-submit" type="submit" name="button">Submit</button>
+
+
+              </form>
+            </div>
+
          </div>
 
 
         <!--footer section-->
-        <div class="row" id="footer">
+        <div class="row" id="footer1">
           <div id="header">
             <h1 class="text-center">SUBSCRIBE HERE</h1>
             <P class="text-center" id="posline3">-</P>
@@ -144,9 +191,39 @@
 
           <div id="subscribe">
             <form>
-              <input type="text" value="Email Address" Id="email">
+              <input type="text" value="Email Address" id="email">
               <input type="submit" value="Subscribe"  class="btn" id="submit">
             </form>
+            <!-- Begin MailChimp Signup Form -->
+            <!-- <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+            <style type="text/css">
+            	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+            	 Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+            	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file.
+            </style>
+            <div id="mc_embed_signup">
+            <form action="//github.us16.list-manage.com/subscribe/post?u=2bbeede329de2b7a5e6f42afc&amp;id=333f19ce87" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+
+            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+            <div class="mc-field-group">
+            	<label for="mce-EMAIL">Email  <span class="asterisk">*</span>
+            </label>
+            	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+            </div>
+            	<div id="mce-responses" class="clear">
+            		<div class="response" id="mce-error-response" style="display:none"></div>
+            		<div class="response" id="mce-success-response" style="display:none"></div>
+            	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2bbeede329de2b7a5e6f42afc_333f19ce87" tabindex="-1" value=""></div>
+                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                </div>
+            </form>
+            </div>
+            <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+            <!--End mc_embed_signup-->
+          <!-- </div>  -->
+
           </div>
 
         <div class="social-icons">
@@ -160,5 +237,22 @@
         </div>
     </div>
 
+    <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+
+    </script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-messaging.js"></script>
+    <script src="/__/firebase/4.2.0/firebase-app.js"></script>
+    <script src="/__/firebase/4.2.0/firebase-auth.js"></script>
+    <script src="/__/firebase/4.2.0/firebase-database.js"></script>
+    <script src="/__/firebase/4.2.0/firebase-messaging.js"></script> -->
+
+  <script src="index.js">
+
+  </script>
   </body>
 </html>
