--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
         <!--jumbotron section-->
         <div class="row jumbotron">
-          <h3 id="center">HELLO WELCOME TO OUR FITNESS SITE</h3>
+          <h3 id="center">ARE YOU READY TO BE FIT?</h3>
           <h1 id="fitme2">FITME</h1>
-          <h2 id="knowmore">KNOW MORE</h2>
-          <button type="button" class="btn" id="button" href="classes.html">CLASSES</button>
+          <h2 id="knowmore">CHECK US OUT</h2>
+          <!-- <button type="button" class="btn" id="button" href="classes.html">CLASSES</button> -->
           <img src="image3.jpg" alt="fitness girl" height="500px" id="top">
         </div>
 
@@ -58,13 +58,13 @@
         <div class="row fixed-top" id="row2">
           <a id="home" class="all"><label>HOME</label></a>
           <p class="posline">|</p>
-          <a id="news" class="all"><label>NEWS</label></a>
+          <a id="news" class="all"href="#description"><label>NEWS</label></a>
           <p class="posline">|</p>
-          <a id="recipe" class="all"><label>RECIPE</label></a>
-          <p class="posline">|</p>
+          <!-- <a id="recipe" class="all"><label>RECIPE</label></a>
+          <p class="posline">|</p> -->
           <a id="classes" class="all" href="classes.html"><label>CLASSES</label></a>
           <p class="posline">|</p>
-          <a id="about" class="all"><label>ABOUT</label></a>
+          <a id="about" class="all"href="#subscribe" ><label>SUBSCRIBE</label></a>
         </div>
 
         <!--instructors section-->
@@ -106,22 +106,26 @@
         <!--footer section-->
         <div class="row" id="footer">
           <div id="header">
-            <h1 class="text-center">SUBSCRIBE HERE</h1>
+            <h1 class="text-center">SUBSCRIBE</h1>
             <P class="text-center" id="posline3">-</P>
           </div>
 
           <div id="subscribe">
-            <form action="" id="login">
-              <input type="text" value="Email Address" id="email">
-              <input type="submit" value="Subscribe"  class="btn" id="submit">
+            <h1>We are here to make you fit</h1>
+            <form class="js-form">
+            <input type="email" id="js-email" class="form-control" value="Email">
+            <input type="password" id="js-password" value="Password">
+            <button id="submit" type="submit" name="button" onclick="subscribe">Subscribe</button>
+
             </form>
+          </div>
 
         <div class="social-icons">
-          <a href="#" class="facebook w3l" title="Go to Our Facebook Page"><i class="fa w3l fa-facebook-square" aria-hidden="true"></i></a>
-          <a href="#" class="twitter w3l" title="Go to Our Twitter Account"><i class="fa w3l fa-twitter-square" aria-hidden="true"></i></a>
-          <a href="#" class="googleplus w3" title="Go to Our Google Plus Account"><i class="fa w3 fa-google-plus-square" aria-hidden="true"></i></a>
-          <a href="#" class="instagram wthree" title="Go to Our Instagram Account"><i class="fa wthree fa-instagram" aria-hidden="true"></i></a>
-          <a href="#" class="youtube w3layouts" title="Go to Our Youtube Channel"><i class="fa w3layouts fa-youtube-square" aria-hidden="true"></i></a>
+          <a href="https://www.facebook.com/phillysalsabar/" class="facebook w3l" title="Go to Our Facebook Page"><i class="fa w3l fa-facebook-square" aria-hidden="true"></i></a>
+          <a href="https://twitter.com/hotsalsadance?lang=en" class="twitter w3l" title="Go to Our Twitter Account"><i class="fa w3l fa-twitter-square" aria-hidden="true"></i></a>
+          <a href="https://plus.google.com/communities/116932479456666335222" class="googleplus w3" title="Go to Our Google Plus Account"><i class="fa w3 fa-google-plus-square" aria-hidden="true"></i></a>
+          <a href="https://www.instagram.com/laurasykora/?hl=en" class="instagram wthree" title="Go to Our Instagram Account"><i class="fa wthree fa-instagram" aria-hidden="true"></i></a>
+          <a href="https://www.youtube.com/watch?v=kuiKlLS0I8w" class="youtube w3layouts" title="Go to Our Youtube Channel"><i class="fa w3layouts fa-youtube-square" aria-hidden="true"></i></a>
         </div>
 
         </div>
