--- a/classes.html
+++ b/classes.html
@@ -113,11 +113,12 @@
                </div>
           <!--charges-->
             <div class=" price col-lg-3">
-              <h5>Charges for the classes</h5>
+              <img src="salsa.jpg" alt="" style="width:200px; height:200px;">
+              <!-- <h5>Charges for the classes</h5>
               <p>5 classes at ksh 10,500/=</p>
               <p>8 classes at ksh 12,000/=</p>
               <p>10 classes at ksh 13,500/=</p>
-              <p>15 classes at ksh 15,500/=</p>
+              <p>15 classes at ksh 15,500/=</p> -->
             </div>
           </div>
             <!-- <div class="total col-lg-3 ">
