--- a/classes.html
+++ b/classes.html
@@ -14,7 +14,7 @@
 
     <!--Font Awesome-->
     <script src="https://use.fontawesome.com/c0dfec8a89.js"></script>
-    <!-- <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet"> -->
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
 
     <!-- Latest compiled and minified CSS -->
@@ -36,7 +36,7 @@
   </script>
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
         <!--beauty section-->
         <div class="row" id="row1">
           <div class="col-md-12">
@@ -152,7 +152,7 @@
 
 
           <div id="description1">
-            <h2 class="text-center" id="exercise1">Book your classes today</h2> -->
+            <h2 class="text-center" id="exercise1">Book your classes today</h2>
             <p class="text-center" id="posline5">-</p>
             <script src="https://embed.zapla.co/embed.js#account=2227" async defer></script>
 
