--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </script>
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
         <!--beauty section-->
         <div class="row" id="row1">
           <div class="col-md-12">
