--- a/classes.html
+++ b/classes.html
@@ -113,7 +113,7 @@
                </div>
           <!--charges-->
             <div class=" price col-lg-3">
-              <img src="salsa.jpg" alt="" style="width:200px; height:200px;">
+              <img src="health/aerobic.jpg" alt="" style="width:300px; height:220px;">
               <!-- <h5>Charges for the classes</h5>
               <p>5 classes at ksh 10,500/=</p>
               <p>8 classes at ksh 12,000/=</p>
